--- a/data/yaml/ns-role.yaml
+++ b/data/yaml/ns-role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: agentic-ai
+  namespace: scr
   name: deployment-manager
 rules:
 - apiGroups: ["apps"]
@@ -18,11 +18,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: deployment-manager-binding
-  namespace: agentic-ai
+  namespace: scr
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: agentic-ai
+  namespace: scr
 roleRef:
   kind: Role
   name: deployment-manager
