--- a/data/yaml/pull-scr.yaml
+++ b/data/yaml/pull-scr.yaml
@@ -1,5 +1,5 @@
 #############################################################################################################################################
-# This YAML loads container pull-scr into Kubernetes
+# This YAML loads container pull-scr into Kubernetes into namespace default
 #-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
 # - ensure setting for image is correct and pointing to the correct container image.
 #-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -11,7 +11,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: pull-scr
-  namespace: agentic-ai
+  namespace: default
   labels:
     app-owner: viyademo01
     app.kubernetes.io/name: pull-scr
@@ -70,7 +70,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pull-scr
-  namespace: agentic-ai
+  namespace: default
   labels:
     app-owner: viyademo01
     app.kubernetes.io/name: pull-scr
@@ -89,7 +89,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: pull-scr
-  namespace: agentic-ai
+  namespace: default
   labels:
     app-owner: viyademo01
     app.kubernetes.io/name: pull-scr
