--- a/data/config/config.cfg
+++ b/data/config/config.cfg
@@ -3,3 +3,7 @@ class Config:
     PORT= '8080'
     HOST= 'my-server.sas.com'
     NAMESPACE= 'scr'
+    LIST_SCR= True
+    PULL_SCR= True
+    RESTART_SCR= True
+    DELETE_SCR= True
