--- a/data/yaml/ns-role.yaml
+++ b/data/yaml/ns-role.yaml
@@ -1,14 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: scr # NAMESPACE for scr container
-  name: deployment-manager
+  namespace: scr # namespace to load the scr containers
+  name: pull-scr-manager
 rules:
 - apiGroups: ["apps"]
   resources: ["deployments", "replicasets"]
   verbs: ["get", "list", "watch", "update", "patch", "delete"]
 - apiGroups: [""]
-  resources: ["pods", "services"]
+  resources: ["pods", "services", "pods/log"]
   verbs: ["get", "list", "watch", "update", "patch", "delete"]
 - apiGroups: ["networking.k8s.io"]
   resources: ["ingresses"]
@@ -17,13 +17,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: deployment-manager-binding
-  namespace: scr # NAMESPACE for scr container
+  name: pull-scr-manager-binding
+  namespace: # namespace to load the scr containers
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: default # NAMESPACE for pull scr
+  namespace: # namespace to load the scr containers
 roleRef:
   kind: Role
-  name: deployment-manager
+  name: pull-scr-manager
   apiGroup: rbac.authorization.k8s.io
