--- a/data/config/k8s-scr-adm.config
+++ b/data/config/k8s-scr-adm.config
@@ -1,5 +1,5 @@
 class Config:
-    BASE_URL= '/pull-scr'
+    BASE_URL= '/k8s-scr-adm'
     PORT= '8080'
     HOST= 'my-server.sas.com'
     NAMESPACE= 'scr'
