--- a/data/config/k8s-scr-adm.config
+++ b/data/config/k8s-scr-adm.config
@@ -3,6 +3,8 @@ class Config:
     PORT= '8080'
     HOST= 'my-server.sas.com'
     NAMESPACE= 'scr'
+    VIYA_NAMESPACE= 'viya4'
+    MAS_POD= 'sas-microanalytic-score'
     LIST_SCR= True
     PULL_SCR= True
     RESTART_SCR= True
