--- a/data/k8s-scr-adm/Dockerfile
+++ b/data/k8s-scr-adm/Dockerfile
@@ -8,6 +8,9 @@ COPY k8s-scr-adm k8s-scr-adm
 COPY start.sh k8s-scr-adm/
 RUN chmod a+x /k8s-scr-adm/start.sh
 
+RUN mkdir -p /k8s-scr-adm/yaml
+RUN chmod 777 /k8s-scr-adm/yaml
+
 RUN apt-get update -y && apt-get install -y curl
 
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
