--- a/data/config/k8s-scr-mgr.config
+++ b/data/config/k8s-scr-mgr.config
@@ -1,8 +1,9 @@
 class Config:
-    BASE_URL= '/k8s-scr-adm'
+    BASE_URL= '/k8s-scr-mgr'
     PORT= '8080'
     HOST= 'my-server.sas.com'
     NAMESPACE= 'scr'
+    CONTAINER_PREFIX= 'scr'
     VIYA_NAMESPACE= 'viya4'
     MAS_POD= 'sas-microanalytic-score'
     LIST_SCR= True
