--- a/data/k8s-scr-mgr/Dockerfile
+++ b/data/k8s-scr-mgr/Dockerfile
@@ -4,12 +4,12 @@ COPY requirements.txt /tmp/requirements.txt
 RUN pip install --no-cache-dir -r /tmp/requirements.txt 
 RUN pip install gunicorn
 
-COPY k8s-scr-adm k8s-scr-adm
-COPY start.sh k8s-scr-adm/
-RUN chmod a+x /k8s-scr-adm/start.sh
+COPY k8s-scr-mgr k8s-scr-mgr
+COPY start.sh k8s-scr-mgr/
+RUN chmod a+x /k8s-scr-mgr/start.sh
 
-RUN mkdir -p /k8s-scr-adm/yaml
-RUN chmod 777 /k8s-scr-adm/yaml
+RUN mkdir -p /k8s-scr-mgr/yaml
+RUN chmod 777 /k8s-scr-mgr/yaml
 
 RUN apt-get update -y && apt-get install -y curl
 
@@ -17,5 +17,5 @@ RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/s
 RUN install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
 EXPOSE 5000
-ENTRYPOINT ["/k8s-scr-adm/start.sh"]
+ENTRYPOINT ["/k8s-scr-mgr/start.sh"]
 #ENTRYPOINT ["/bin/bash"]
