--- a/data/yaml/k8s-scr-mgr.yaml
+++ b/data/yaml/k8s-scr-mgr.yaml
@@ -13,18 +13,18 @@ metadata:
   name: k8s-scr-mgr
   namespace: default
   labels:
-    app-owner: viyademo01
+    app-owner: sas
     app.kubernetes.io/name: k8s-scr-mgr
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app-owner: viyademo01
+      app-owner: sas
       app.kubernetes.io/name: k8s-scr-mgr
   template:
     metadata:
       labels:
-        app-owner: viyademo01
+        app-owner: sas
         app.kubernetes.io/name: k8s-scr-mgr
     spec:
       containers:
@@ -72,7 +72,7 @@ metadata:
   name: k8s-scr-mgr
   namespace: default
   labels:
-    app-owner: viyademo01
+    app-owner: sas
     app.kubernetes.io/name: k8s-scr-mgr
 spec:
   ports:
@@ -81,7 +81,7 @@ spec:
     port: 80
     targetPort: 5000
   selector:
-    app-owner: viyademo01
+    app-owner: sas
     app.kubernetes.io/name: k8s-scr-mgr
   type: ClusterIP
 ---
@@ -91,7 +91,7 @@ metadata:
   name: k8s-scr-mgr
   namespace: default
   labels:
-    app-owner: viyademo01
+    app-owner: sas
     app.kubernetes.io/name: k8s-scr-mgr
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
