--- a/data/yaml/mas-log-reader.yaml
+++ b/data/yaml/mas-log-reader.yaml
@@ -42,7 +42,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: default
+  namespace: default # namespace where k8s-scr-adm is running
 roleRef:
   kind: ClusterRole
   name: mas-log-reader-cluster
