--- a/data/config/k8s-scr-mgr.config
+++ b/data/config/k8s-scr-mgr.config
@@ -4,7 +4,7 @@ class Config:
     HOST= 'my-server.sas.com'
     NAMESPACE= 'scr'
     CONTAINER_PREFIX= 'scr'
-    VIYA_NAMESPACE= 'viya4'
+    VIYA_NAMESPACE= 'viya'
     MAS_POD= 'sas-microanalytic-score'
     LIST_SCR= True
     PULL_SCR= True
