--- a/data/config/scr-template.yaml
+++ b/data/config/scr-template.yaml
@@ -1,3 +1,14 @@
+#################################################################################################
+# The template is using token which get resolved when the template is called by k8s-scr-mgr:
+# <PREFIX>:            The prefix when the SCR container is loaded into Kubernetes
+# <SCR-NAME>:          The SCR name loaed into Kubernetes
+# <NAMESPACE>:         The namespace where the containetr is loaded
+# <APP-OWNER>:         Contact person responsable for the SCR container
+# <IMAGE-NAME>:        Name of the SCR image in the container registry
+# <SCR-TAG>:           Container tag
+# <IMAGE-PULL-POLICY>: Image pull policy
+# <HOST>:              URL where Kubernetes is running
+#################################################################################################
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -60,7 +71,7 @@ spec:
   - name: http
     protocol: TCP
     port: 80
-    targetPort: <PORT>
+    targetPort: http
   selector:
     app-owner: <APP-OWNER>
     app.kubernetes.io/name: <PREFIX><SCR-NAME>
