--- a/charts/k8sscrmgr/values.yaml
+++ b/charts/k8sscrmgr/values.yaml
@@ -12,7 +12,6 @@ namespace:
 # k8s-scr-mgr parameters
 k8sScrMgr:
   base_url: /k8s-scr-mgr
-  port: 8080
   host:
   viya_namespace: viya
   container_prefix: scr
@@ -23,6 +22,8 @@ k8sScrMgr:
   delete_scr: True
   getlog_scr: True
   getlog_mas: True 
+  scr_yaml_template:
+  kubeconfig:
 
 # Docker registry credentials
 dockerCredentials:
