--- a/charts/k8sscrmgr/templates/scr-secret-db.yaml
+++ b/charts/k8sscrmgr/templates/scr-secret-db.yaml
@@ -1,11 +1,30 @@
 {{- if .Values.dbCredentials.connectionstring }}
+
 apiVersion: v1
 kind: Secret
 metadata:
   name: scr-db-secrets
-  #name: {{ .Release.Name }}-db-secret # do not change this name!
   namespace: {{ .Values.namespace.ns_scr }} 
 type: Opaque
 data:
   db.secrets: {{ printf "connectionstring=%s" .Values.dbCredentials.connectionstring | b64enc | quote }}
+
+{{- else }}
+  {{- range $i, $item := .Values.scr }}
+  {{- if $item.dbCredentials }}
+    {{- $namespace := ($item.namespace | default "") | lower | replace " " "-" | trunc 63 }}
+    {{- $connectionstring := $item.dbCredentials }}
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: scr-db-secrets
+  namespace: {{ $namespace | quote }}
+type: Opaque
+data:
+  db.secrets: {{ printf "connectionstring=%s" $connectionstring | b64enc | quote }}
+  
+    {{- end }}
+  {{- end }}
 {{- end }}
