--- a/charts/k8sscrmgr/templates/scr-secret-db.yaml
+++ b/charts/k8sscrmgr/templates/scr-secret-db.yaml
@@ -1,18 +1,15 @@
-{{- if .Values.dbCredentials.connectionstring }}
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: scr-db-secrets
-  namespace: {{ .Values.namespace.ns_scr }} 
-type: Opaque
-data:
-  db.secrets: {{ printf "connectionstring=%s" .Values.dbCredentials.connectionstring | b64enc | quote }}
-
-{{- else }}
-  {{- range $i, $item := .Values.scr }}
+{{- $ns := "" -}}
+{{- range $i, $item := .Values.scr }}
   {{- if $item.dbCredentials }}
-    {{- $namespace := ($item.namespace | default "") | lower | replace " " "-" | trunc 63 }}
+    {{- if eq $i 0 }}
+      {{- /* For the first item: default to "scr" if missing */}}
+      {{- $ns = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+    {{- else }}
+      {{- /* For subsequent items: hard-require namespace */}}
+      {{- $ns = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<container registry location (URI)>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+    {{- end }}
+    
+    {{- $namespace := $ns -}}
     {{- $connectionstring := $item.dbCredentials }}
 
 ---
@@ -26,5 +23,4 @@ data:
   db.secrets: {{ printf "connectionstring=%s" $connectionstring | b64enc | quote }}
   
     {{- end }}
-  {{- end }}
 {{- end }}
