--- a/charts/k8sscrmgr/templates/scr-secret-docker.yaml
+++ b/charts/k8sscrmgr/templates/scr-secret-docker.yaml
@@ -1,18 +1,33 @@
+{{- $ns := "" -}}
+{{- range $i, $item := .Values.scr }}
+  {{- if eq $i 0 }}
+    {{- /* For the first item: default to "scr" if missing */}}
+    {{- $ns = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+  {{- else }}
+    {{- /* For subsequent items: hard-require namespace */}}
+    {{- $ns = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<container registry location (URI)>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+  {{- end }}
+  
+  {{- $namespace := $ns -}}
+
+---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-docker-pull-secret   # do not change this name!
-  namespace: {{ .Values.namespace.ns_scr }}
+  name: {{ $.Release.Name }}-docker-pull-secret   # do not change this name!
+  namespace: {{ $namespace | quote }}
 type: kubernetes.io/dockerconfigjson
 stringData:
   .dockerconfigjson: |
     {
       "auths": {
-        "{{ required "Missing parameter 'dockerCredentials.baseRepoURL': --set dockerCredentials.baseRepoURL=<container registry location (URI)>" .Values.dockerCredentials.baseRepoURL }}": {
-          "username": "{{ required "Missing parameter 'dockerCredentials.registryId': --set dockerCredentials.registryId=<container registry name>" .Values.dockerCredentials.registryId }}",
-          "password": "{{ required "Missing parameter 'dockerCredentials.registryPassword': --set dockerCredentials.registryPassword=<container registry password>" .Values.dockerCredentials.registryPassword }}",
-           "auth": "{{ printf "%s:%s" .Values.dockerCredentials.registryId .Values.dockerCredentials.registryPassword | b64enc }}"
+        "{{ required (printf "Missing parameter 'scr[%d].dockerCredentials.baseRepoURL': --set scr[%d].dockerCredentials.baseRepoURL=<container registry location (URI)>" $i $i) $item.dockerCredentials.baseRepoURL }}": {
+          "username": "{{ required (printf "Missing parameter 'scr[%d].dockerCredentials.registryId': --set scr[%d].dockerCredentials.registryId=<container registry location (URI)>" $i $i) $item.dockerCredentials.registryId }}",
+          "password": "{{ required (printf "Missing parameter 'scr[%d].dockerCredentials.registryPassword': --set scr[%d].dockerCredentials.registryPassword=<container registry password>" $i $i) $item.dockerCredentials.registryPassword }}",
+           "auth": "{{ printf "%s:%s" $item.dockerCredentials.registryId $item.dockerCredentials.registryPassword | b64enc }}"
         }
       }
     }
+
+{{ end }}
 
