--- a/charts/k8sscrmgr/templates/k8s-scr-mgr-rolebinding.yaml
+++ b/charts/k8sscrmgr/templates/k8s-scr-mgr-rolebinding.yaml
@@ -9,18 +9,20 @@
   {{- end }}
   
   {{- $namespace := $ns -}}
-
-  {{/* Create Namespace if not exists */}}
-  {{- $existing := (lookup "v1" "Namespace" "" $namespace) -}}
-  {{- if not $existing }}
-
+  
 ---
-apiVersion: v1
-kind: Namespace
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
 metadata:
-  name: {{ $namespace }}
-  annotations:
-    "helm.sh/resource-policy": keep
-
-  {{- end }}  
-{{- end }}  
+  name: {{ $.Release.Name }}-binding-{{ $namespace }}
+  namespace: {{ $namespace | quote }} # namespace where SCRs are deployed
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: {{ $.Release.Namespace | quote }} # namespace where k8s-scr-mgr pod is running
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: {{ $.Release.Name }}-role
+  
+{{- end }}
