--- a/charts/k8sscrmgr/values.yaml
+++ b/charts/k8sscrmgr/values.yaml
@@ -1,15 +1,14 @@
 # values.yaml
-fuffixName: ""
 installName: ""
 
-# Namespaces for SCR
-namespace:
-  ns_scr: scr
+# default scr namepsace
+defaultScrNamespace: scr
 
 # k8s-scr-mgr parameters
 k8sScrMgr:
-  base_url: /k8s-scr-mgr
   host:
+  kubeconfig:
+  scr_yaml_template:
   viya_namespace: viya
   container_prefix: scr
   mas_pod: sas-microanalytic-score
@@ -19,31 +18,12 @@ k8sScrMgr:
   delete_scr: True
   getlog_scr: True
   getlog_mas: True 
-  scr_yaml_template:
-  kubeconfig:
-
-# Docker registry credentials
-dockerCredentials:
-  baseRepoURL:
-  registryId:
-  registryPassword:
-  
-# Database credentials for SCR Manager
-dbCredentials:
-  connectionstring:
 
 # List of scr parameters used when creating more than one SCR namespace
 scr:
-  - namespace: scr
-    dbCredentials: "driver=sql;conopts=((driver=postgres;catalog=public;uid=sas;pwd=lnxsas;server=pg-demo-postgresql.default.svc.cluster.local;port=5431;DB=postgres;))"
+  - namespace:
+    dbCredentials:
     dockerCredentials:
-      baseRepoURL: "www"
-      registryId: "ooo"
-      registryPassword: "pwd"
-
-  - namespace: scr2
-    dbCredentials: "driver=sql;conopts=((driver=postgres;catalog=public;uid=sas;pwd=lnxsas;server=pg-demo-postgresql.default.svc.cluster.local;port=5431;DB=postgres;))"
-    dockerCredentials:
-      baseRepoURL: "www"
-      registryId: "ooo"
-      registryPassword: "pwd"
+      baseRepoURL:
+      registryId:
+      registryPassword:
