--- a/charts/k8sscrmgr/templates/scr-secret-docker.yaml
+++ b/charts/k8sscrmgr/templates/scr-secret-docker.yaml
@@ -14,7 +14,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $.Release.Name }}-docker-pull-secret   # do not change this name!
+  name: scr-docker-pull-secret   # do not change this name!
   namespace: {{ $namespace | quote }}
 type: kubernetes.io/dockerconfigjson
 stringData:
