--- a/charts/k8sscrmgr/templates/k8s-scr-mgr-cfg.yaml
+++ b/charts/k8sscrmgr/templates/k8s-scr-mgr-cfg.yaml
@@ -11,7 +11,6 @@ data:
         HOST= '{{ required "Missing parameter 'k8sScrMgr.host': --set k8sScrMgr.host=<k8s-scr-mgr URL>" .Values.k8sScrMgr.host }}'
         NAMESPACE= '{{ $scr_namespace }}'
         CONTAINER_PREFIX= '{{ .Values.k8sScrMgr.container_prefix }}'
-        CONTAINER_REGISTRY= '{{ required "Missing parameter 'scr[0].dockerCredentials.baseRepoURL': --set scr[0].dockerCredentials.baseRepoURL=<container registry location (URI)>" (index .Values.scr 0).dockerCredentials.baseRepoURL }}'
         VIYA_NAMESPACE= '{{ .Values.k8sScrMgr.viya_namespace }}'
         MAS_POD= '{{ .Values.k8sScrMgr.mas_pod }}'
         LIST_SCR= {{ ternary "True" "False" .Values.k8sScrMgr.list_scr }}
@@ -20,3 +19,26 @@ data:
         DELETE_SCR= {{ ternary "True" "False" .Values.k8sScrMgr.delete_scr }}
         GETLOG_SCR= {{ ternary "True" "False" .Values.k8sScrMgr.getlog_scr }}
         GETLOG_MAS= {{ ternary "True" "False" .Values.k8sScrMgr.getlog_mas }}
+        ##################################################
+        # Below are settings to map namespaces to container registries
+        #################################################
+
+{{- $nsRepoMap := dict -}}
+{{- $namespace := "" -}}
+{{- $last := sub (len .Values.scr) 1 -}}
+{{- range $i, $item := .Values.scr }}
+  {{- $comma := ternary "," "" (eq $i $last | not) -}}
+
+  {{- if eq $i 0 }}
+    {{- /* For the first item: default to "scr" if missing */}}
+    {{- $namespace = (default $.Values.defaultScrNamespace $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+  {{- else }}
+    {{- /* For subsequent items: hard-require namespace */}}
+    {{- $namespace = (required (printf "Missing parameter 'scr[%d].namespace': --set scr[%d].namespace=<container registry location (URI)>" $i $i) $item.namespace) | lower | replace " " "-" | trunc 63 -}}
+  {{- end }}
+  {{- $registry := (required (printf "Missing parameter 'scr[%d].dockerCredentials.baseRepoURL': --set scr[%d].dockerCredentials.baseRepoURL=<container registry location (URI)>" $i $i) $item.dockerCredentials.baseRepoURL) -}}
+
+  {{- $_ := set $nsRepoMap $namespace $registry -}}
+{{- end }}
+        NS_TO_REGISTRY_MAP= { {{ toPrettyJson $nsRepoMap | trimPrefix "{\n" | trimSuffix "\n}" | nindent 27 }} 
+                            }
