--- a/charts/k8sscrmgr/templates/scr-template.yaml
+++ b/charts/k8sscrmgr/templates/scr-template.yaml
@@ -95,7 +95,7 @@ data:
       - host: <HOST>
         http:
           paths:
-          - path: /<SCR-NAME>
+          - path: /<SCR-ENDPOINT>
             pathType: Prefix
             backend:
               service:
