--- a/data/config/k8s-scr-mgr.config
+++ b/data/config/k8s-scr-mgr.config
@@ -1,9 +1,9 @@
 class Config:
-    PORT= '8080'
     HOST= 'my-server.sas.com'
+    PORT= '8080'
     NAMESPACE= 'scr'
     CONTAINER_PREFIX= 'scr'
-    VIYA_NAMESPACE= 'viya'
+    VIYA_NAMESPACE= 'viya4'
     MAS_POD= 'sas-microanalytic-score'
     LIST_SCR= True
     PULL_SCR= True
@@ -11,3 +11,6 @@ class Config:
     DELETE_SCR= True
     GETLOG_SCR= True
     GETLOG_MAS= True
+    NS_TO_REGISTRY_MAP= {
+                        'scr': 'myregistry.azurecr.io'
+                        } 
